--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -22,42 +22,54 @@ import {
   DisclosurePrimitive,
   DisclosurePrimitiveContent,
   useDisclosurePrimitiveState,
+  Flex,
 } from "@twilio-paste/core";
+import { LinkExternalIcon } from "@twilio-paste/icons/cjs/LinkExternalIcon";
+
 import { SiteFooter } from "../components/footer";
 
 <Box>
   <Grid>
-    <Column span={[12,12,4]} offset={[0,0,1]}>
+    <Column span={[12, 12, 4]} offset={[0, 0, 1]}>
       <Heading as="h1" variant="heading10">
         I&rsquo;m{" "}
         <Box as="span" backgroundColor="colorBackgroundBrandHighlight">
           Aayush Iyer
         </Box>
-        . I work on building better products through design, and better design
-        through systems.
+        . I work on building better products through design, and better design through
+        systems.
       </Heading>
       <Box backgroundColor="colorText">
-        <Stack orientation={["vertical","vertical","horizontal"]} spacing="space60">
+        <Stack
+          orientation={["vertical", "vertical", "horizontal"]}
+          spacing="space60"
+        >
           <Link href="/work" passHref>
             <Anchor>Work</Anchor>
           </Link>
+            <Flex display="inline-flex" vAlignContent="center">
           <Link href="//twitter.com/aayush" passHref>
-            <Anchor>Twitter</Anchor>
+              <Anchor>Twitter</Anchor>
           </Link>
+              <LinkExternalIcon
+                decorative={false}
+                title="Opens an external resource"
+              />
+            </Flex>
         </Stack>
       </Box>
     </Column>
   </Grid>
   <Box marginTop="space100">
     <Grid>
-      <Column span={[12,12,4]} offset={[0,0,1]}>
+      <Column span={[12, 12, 4]} offset={[0, 0, 1]}>
         <Heading as="h2" variant="heading20">
           Recent Writing
         </Heading>
         <Separator orientation="horizontal" verticalSpacing="space50" />
         <Text as="p">This space is unfortunately blank</Text>
       </Column>
-      <Column span={[12,12,4]} offset={[0,0,1]}>
+      <Column span={[12, 12, 4]} offset={[0, 0, 1]}>
         <Heading as="h2" variant="heading20">
           Work
         </Heading>
