docs(scaling): added text and tokens for new article

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -44,6 +44,9 @@ import { SiteFooter } from "../components/footer";
           orientation={["vertical", "vertical", "horizontal"]}
           spacing="space60"
         >
+          <Link href="/writing" passHref>
+            <Anchor>Writing</Anchor>
+          </Link>
           <Link href="/work" passHref>
             <Anchor>Work</Anchor>
           </Link>
