--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -24,7 +24,9 @@ import {
   MediaObject,
   MediaFigure,
   MediaBody,
+  Avatar
 } from "@twilio-paste/core";
+import { SiteFooter } from "../../components/footer";
 
 <Grid gutter="space40">
   <Column span={4} offset={1}>
@@ -46,134 +48,243 @@ import {
       Scaling design system <Box as="span" backgroundColor="colorBackgroundBrandHighlight">support</Box>
     </Heading>
     <Paragraph>
-      Paste, a design system for Twilio’s customer experiences was launched in
-      the second half of 2018. It was our fifth attempt at building a UI
-      platform, and happened when Twilio was projecting revenue estimates of
-      over half a million dollars. At the time, more than 2 million developers
-      had used 25+ products at Twilio, each of which had their own versions of
-      UI frameworks, and significant design patten drift.
+      Here's a situation you might encounter while building a design system (or any platform) where there was none before: you'll begin your journey by [doing things that don't scale](http://paulgraham.com/ds.html). Then at a certain inflection point, a change will be necessary: it might be technical or procedural, but is almost always *also* cultural. We saw this as the design systems teams was incubated and eventually scaled organization wide.
     </Paragraph>
-    <Paragraph>
-      None of this is uncommon at the start of UI systemization, but the scale
-      of the company definitely triggered some unique challenges. And while the
-      expected problems of API design, tokenization, and component reviews were
-      crucial tasks to kick off, we chose instead to focus on support.
-    </Paragraph>
+    </Column>
+</Grid>
+<Grid gutter="space40">
+  <Column span={4} offset={1}>
     <Heading as="h2" variant="heading20">
-      Why start with support?
+      Stage 1: Support as incubation
     </Heading>
     <Paragraph>
-      I believe that at the heart of it, a good design system does two things
-      effectively:
-    </Paragraph>
-    <OrderedList>
-      <ListItem>
-        Ensure that people feel like they have agency and involvement as their
-        own hacks and workarounds are replaced with systemized paved paths.
-      </ListItem>
-      <ListItem>
-        Attenuate the thrash of constant change for teams, so they can trust
-        they system and focus on delivery.
-      </ListItem>
-    </OrderedList>
-    <Paragraph>
-      To put it brusquely, as a leader, design systems is change and feelings
-      management. And supporting teams who may not have the space to consider
-      the long-term journey of a platform team is critical to doing this right.
+      In 2018, we didn’t have a design system at Twilio. This meant that the most efficient way to express a UI solution involved copying older implementations and adopting popular code snippets and packages. In and of itself, this was fine: however, it did create situations where a UI compromise was necessary.
     </Paragraph>
     <Paragraph>
-      Support is crucial, and we did get it wrong early. A particularly low
-      point in our journey early on, was when a delivery engineer reached out to
-      understand how they may use the legacy component libraries to achieve a
-      basic layout, and were deeply disappointed by how much friction there is
-      to get something going. We definitely lost the trust of that engineer, and
-      likely have to work a lot to regain that trust.
-    </Paragraph>
-    <Heading as="h2" variant="heading20">
-      The different stages of support
-    </Heading>
-    <Paragraph>
-      Good support systems scale dynamically with an ebb and flow that responds
-      to team size, organizational events, and stages of adoption. Over three
-      years, we’ve seen three decided shifts in how we support our customers.
-    </Paragraph>
-    <Heading as="h3" variant="heading40">
-      The Town Crier (Pre-Market)
-    </Heading>
-    <Paragraph>
-      Before we built Paste, the Design System team was about a 10% of my time
-      as a Product Designer, and two contract engineers. At the time, I had an
-      understanding of the benefits of a design system, but building was deep in
-      the unfamiliar territory. Instead of building a new component system, we
-      chose instead to establish ownership through support.
+      Since we were just incubating and weren't fully staffed or bought-in by the organization, we took small steps. One such step was the creation of a *help* slack channel. Here, no matter what your UI question was, we'd attempt to solve it. What's more, we wanted to solve it quickly. While this approach didn't allow for the best answer for each experience, it did allow us to take diving catches that built trust with designers, PMs, and engineers.
     </Paragraph>
   </Column>
-</Grid>
-
-<Box
-  as="section"
-  marginTop="space50"
-  paddingTop="space100"
-  paddingBottom="space100"
+  <Column>
+  <Box display="flex" justifyContent="flex-start">
+  <Stack orientation="vertical" spacing="space60"><MediaObject as="div">
+  <MediaBody>
+  <Box
+  as="div"
+  color="colorTextInverse"
   backgroundColor="colorBackgroundInverse"
->
-  <Grid gutter="space40">
-    <Column span={3} offset={1}>
-      <Text as="p" color="colorTextInverse">
-        This site is being built, in an act of extreme dogfooding, with{" "}
-        <Link href="//paste.twilio.design/" passHref>
-          <Text as="a" color="colorTextInverse">
-            Paste
-          </Text>
-        </Link>
-        . It also uses{" "}
-        <Link href="//nextjs.org/" passHref>
-          <Text as="a" color="colorTextInverse">
-            Next.js
-          </Text>
-        </Link>
-        , which is nice. It was mostly possible due to{" "}
-        <Link href="//simontaggart.com/" passHref>
-          <Text as="a" color="colorTextInverse">
-            Simon Taggart
-          </Text>
-        </Link>
-        , who patiently handled my 101 Qs.
-      </Text>
-    </Column>
-    <Column span={2} offset={1}>
-      <Box>
-        <Stack orientation="vertical" spacing="space30">
-          <Link href="/work" passHref>
-            <Text as="a" color="colorTextInverse">
-              Work
-            </Text>
-          </Link>
-          <Link href="//twitter.com/aayush" passHref>
-            <Text as="a" color="colorTextInverse">
-              Twitter
-            </Text>
-          </Link>
-        </Stack>
-      </Box>
-    </Column>
-    <Column span={3}>
-      <Box>
-        <Stack orientation="vertical" spacing="space30">
-          <Text as="p" color="colorTextInverse">
-            Black Lives Matter.
-          </Text>
-          <Text as="p" color="colorTextInverse">
-            No man is illegal.
-          </Text>
-          <Text as="p" color="colorTextInverse">
-            Sex worker rights are labor rights.
-          </Text>
-          <Text as="p" color="colorTextInverse">
-            Our liberation is bound together.
-          </Text>
-        </Stack>
-      </Box>
-    </Column>
-  </Grid>
+  borderRadius="borderRadius20"
+  borderTopRightRadius="borderRadius0"
+  fontSize="fontSize30"
+  lineHeight="lineHeight20"
+  padding="space30"
+  maxWidth="size30"
+  >
+  My build broke, can you help?
+  </Box>
+  <Text as="div" color="colorText" fontSize="fontSize20" textAlign="right">
+  Engineer X
+  </Text>
+  </MediaBody>
+  </MediaObject>
+  <MediaObject as="div">
+  <MediaBody>
+  <Box
+  as="div"
+  color="colorTextInverse"
+  backgroundColor="colorBackgroundInverse"
+  borderRadius="borderRadius20"
+  borderTopRightRadius="borderRadius0"
+  fontSize="fontSize30"
+  lineHeight="lineHeight20"
+  padding="space30"
+  maxWidth="size30"
+  >
+  Do we have icons to indicate a loading state?
+  </Box>
+  <Text as="div" color="colorText" fontSize="fontSize20" textAlign="right">
+  Designer Y
+  </Text>
+  </MediaBody>
+  </MediaObject></Stack>
 </Box>
+  </Column>
+  </Grid>
+  <Grid gutter="space40">
+  <Column span={4} offset={1}>
+   <Heading as="h2" variant="heading20">
+      Stage 2: Support as we scaled
+    </Heading>
+    <Paragraph>
+      Fast forward about a year, and Paste was just about begging a steep adoption curve. Unlike our legacy libraries (which had larger, more complex monolithic components), we had moved to an approach of small, accessible, and composable pieces that could be mixed and matched. As designers and engineers were beginning to use the system as a baseline for their UIs. In doing so, there was a lot of relearning and undoing old habits. We started getting increasingly complex questions around accessibility, composition, UI reviews, and of course Typescript errors. We’d see upwards of 10 questions a day, and the team began to feel it.
+    </Paragraph>
+    <Paragraph>
+      To do so, we investigated why our support model was failing at scale:
+    </Paragraph>
+    <UnorderedList>
+      <ListItem>
+        The *immediacy* of Slack meant it was easier for people to get answers to their questions through a Slack message than go to the doc site to look for an answer.
+      </ListItem>
+    <ListItem>Slack messages are ephemeral and teams around the world would routinely wake up to a host of new information that they’d just not see, leading to repeated questions.</ListItem>
+    <ListItem>The quality of incoming requests was affected by the medium: “My build broke can you help?” instead of “My build (screenshot attached) failed, I am currently doing _x_, and tried to do _y_”</ListItem>
+    </UnorderedList>
+    <Separator orientation="horizontal" verticalSpacing="space50" />
+    <Paragraph>
+      A change was necessary: we needed to evolve our discussions from "What's fast and cheap?" to "What's right?"
+    </Paragraph>
+    <Paragraph>To address the rising tide of support questions, the team stepped back. We set up better structures for documentation, assigned rotating helpers who led support conversations through the week, and moved all support conversations from Slack to GitHub discussions.</Paragraph>
+    <Paragraph>Except, our customers still expected support on Slack.</Paragraph>
+    <Paragraph>This was a cultural change: moving the support model from Slack to a new platform was at the very least, a significant inconvenience. At worst, it was a breach of trust that the system was founded on. Managing how our users felt about this change was an important criteria for success. We’d need to inform people of the change, and then remind them of it enough till the habit was broken and remade. And we had to hope that in all of this, they still trusted us.</Paragraph>
+    </Column>
+   <Column>
+  <Box display="flex" justifyContent="flex-start">
+  <Stack orientation="vertical" spacing="space60"><MediaObject as="div">
+  <MediaBody>
+  <Box
+  as="div"
+  color="colorTextInverse"
+  backgroundColor="colorBackgroundInverse"
+  borderRadius="borderRadius20"
+  borderTopRightRadius="borderRadius0"
+  fontSize="fontSize30"
+  lineHeight="lineHeight20"
+  padding="space30"
+  maxWidth="size30"
+  >
+  My build broke, can you help?
+  </Box>
+  <Text as="div" color="colorText" fontSize="fontSize20" textAlign="right">
+  Engineer X
+  </Text>
+  </MediaBody>
+  </MediaObject>
+  <MediaObject as="div">
+  <MediaBody>
+  <Box
+  as="div"
+  color="colorTextInverse"
+  backgroundColor="colorBackgroundInverse"
+  borderRadius="borderRadius20"
+  borderTopRightRadius="borderRadius0"
+  fontSize="fontSize30"
+  lineHeight="lineHeight20"
+  padding="space30"
+  maxWidth="size30"
+  >
+  Do we have icons to indicate a loading state?
+  </Box>
+  <Text as="div" color="colorText" fontSize="fontSize20" textAlign="right">
+  Designer Y
+  </Text>
+  </MediaBody>
+  </MediaObject>
+  <MediaObject as="div">
+  <MediaBody>
+  <Box
+  as="div"
+  color="colorTextInverse"
+  backgroundColor="colorBackgroundInverse"
+  borderRadius="borderRadius20"
+  borderTopRightRadius="borderRadius0"
+  fontSize="fontSize30"
+  lineHeight="lineHeight20"
+  padding="space30"
+  maxWidth="size30"
+  >
+  Do we have icons to indicate a loading state?
+  </Box>
+  <Text as="div" color="colorText" fontSize="fontSize20" textAlign="right">
+  Designer Y
+  </Text>
+  </MediaBody>
+  </MediaObject>
+
+  <MediaObject as="div">
+  <MediaBody>
+  <Box
+  as="div"
+  color="colorTextInverse"
+  backgroundColor="colorBackgroundInverse"
+  borderRadius="borderRadius20"
+  borderTopRightRadius="borderRadius0"
+  fontSize="fontSize30"
+  lineHeight="lineHeight20"
+  padding="space30"
+  maxWidth="size30"
+  >
+  Do we have icons to indicate a loading state?
+  </Box>
+  <Text as="div" color="colorText" fontSize="fontSize20" textAlign="right">
+  Designer Y
+  </Text>
+  </MediaBody>
+  </MediaObject>
+  </Stack>
+</Box>
+  </Column>
+    </Grid>
+  <Grid gutter="space40">
+  <Column span={4} offset={1}>
+    <Heading as="h2" variant="heading20">
+      Making the support change
+    </Heading>
+    <Heading as="h3" variant="heading30">
+      How we announced it
+    </Heading>
+    <Paragraph>We made the change official by announcing a new support model at an All Hands meeting. It was made alongside many positive announcements. That helped absorb the initial blow, but was also missed by quite a few folks. Keeping this change going meant we’d need to be persistent. support We’d need to politely, but firmly say no to every request unless it came from the right channel. That being said, design systems are also *feelings* management: it was hard to have a team that routinely said *yes, and* to every request now  point to an external URL for any help.</Paragraph>
+    <Heading as="h3" variant="heading30">
+      Enter the automations
+    </Heading>
+    <Paragraph>We addressed new users first: using Slack’s workflow builder, I built a bot that DM’d anyone who joined our Slack channel for the first time with a greeting, important information, and a link to our support area.</Paragraph>
+    
+    <Paragraph>
+      And while that helped, we knew that we still had hundreds of people still active in the channel with a previous social contract.
+    </Paragraph>
+    
+    <Paragraph>
+      To remedy this, we built another bot: This one was a little less discrete. For every new question that showed up in Slack, it posted a response suggesting the user redirect this question to a support channel.
+    </Paragraph>
+    
+    <Paragraph>
+      We sweated the details on the copy of this. It had to be polite, sufficiently firm and also provide reasons why we were making this change. We also included an escalation path: while the chances of hitting this button are extremely rare (given that our design system does not directly deploy to customers), it did give customers peace of mind in knowing that urgent requests were still handled in this channel.
+    </Paragraph>
+    
+    <Paragraph>
+      For a number of reasons, this couldn’t be automatic: we set it to respond to an emoji reaction as a trigger. Since we’re mostly picky, we sweated on the perfect reaction too: it can’t be snarky, it can’t be rude: it had to convey the message that we’re doing this for a higher bar of documentation. So we turned to one of our favorite Twilio company values: Wwrite It Ddown. By using it as an emoji, we framed the redirection as an application of company values, and not personal hubris.
+    </Paragraph>
+    
+    <Paragraph>
+      We launched this about two months ago. Here’s what we’ve observed so far:
+    </Paragraph>
+    
+    
+    <UnorderedList><ListItem>
+    Slack support requests have dropped from 10+ a day to ~ 3 a week. Some of these are redirected to GitHub, but others are managed directly.
+    </ListItem>
+    
+    <ListItem>
+    GitHub discussions did _*not*_ increase to 10+ a day (it did increase significantly, but nowhere as close) A hypothesis we have for this is that customers are more willing to try a few things out if the immediacy of Slack is not available.
+    </ListItem>
+    
+    <ListItem>
+    The quality of discussions increased somewhat. We still have a ways to go. Our hypothesis here is that independent of the medium, we probably have a lot more that we can do to help frame better conversations around UI.
+    </ListItem>
+    <ListItem>
+      Change is hard. Customers miss the immediacy of Slack, and the informal tone of support.
+    </ListItem>
+  </UnorderedList>
+  <Paragraph>
+    There’s still unanswered questions about design system support at Twilio. In the year ahead, we hope to:
+  </Paragraph>
+  <UnorderedList>
+    
+    <ListItem>
+      Make support more conversational, and less transactional: each support question should influence the design and direction of the system.
+    </ListItem>
+    
+    <ListItem>
+      Move discussions from 1:1 conversations to 1:many—like a good design problem, there are a number of ways to tackle a specific problem. Diverse perspectives usually lead to better outcomes.
+    </ListItem>
+    </UnorderedList>
+</Column>
+</Grid>
+<SiteFooter />
